--- a/Django_Checkbook/Django_Checkbook/Checkbook/templates/checkbook/BalanceSheet.html
+++ b/Django_Checkbook/Django_Checkbook/Checkbook/templates/checkbook/BalanceSheet.html
@@ -4,9 +4,10 @@
 			<div id="all-transactions-form">
 				<form> <!-- Use value to add the Django populated details-->
 					<br>
-					<label>Account Holder:</label><input id="accountholder" type="text" name="accountHolder" value="" readonly><br><br>
+					<label>Account Holder:</label>
 					<input id="accountholder" type="text" name="accountHolder" value="{{ account }}" readonly>
-					<label>Current Balance:</label><input id="balance" type="text" name="currentBalance" value="" readonly>
+					<br><br>
+					<label>Current Balance:</label>
 					<input id="balance" type="text" name="currentBalance" value="{{ balance }}" readonly>
 					<!-- Add link to href to make this button work -->
 					<button type="button"><a href="{% url 'transaction'%} ">Add Transaction+</a></button>
@@ -25,7 +26,7 @@
 				</tr>
 				{% for key, total in table_contents.items %}
 				<tr>
-					<td class="center">{{ kay.date }}</td>
+					<td class="center">{{ key.date }}</td>
 					<td class="center">{{ key.type }}</td>
 					<td class="left">{{ key.description }}</td>
 					<td class="right">{{ key.amount }}</td>
